@@ -81,6 +81,9 @@
 
 #-------------------------- Elasticsearch output ------------------------------
 output.elasticsearch:
+  # Boolean flag to enable or disable the output module.
+  #enable: true
+
   # Array of hosts to connect to.
   # Scheme and port can be left out and will be set to the default (http and 9200)
   # In case you specify and additional path, the scheme is required: http://localhost:9200/path
@@ -178,6 +181,9 @@ output.elasticsearch:
 
 #----------------------------- Logstash output --------------------------------
 #output.logstash:
+  # Boolean flag to enable or disable the output module.
+  #enable: true
+
   # The Logstash hosts
   #hosts: ["localhost:5044"]
 
@@ -228,6 +234,9 @@ output.elasticsearch:
 
 #------------------------------- Kafka output ---------------------------------
 #output.kafka:
+  # Boolean flag to enable or disable the output module.
+  #enable: true
+
   # The list of Kafka broker addresses from where to fetch the cluster metadata.
   # The cluster metadata contain the actual Kafka brokers events are published
   # to.
@@ -316,6 +325,9 @@ output.elasticsearch:
 
 #------------------------------- Redis output ---------------------------------
 #output.redis:
+  # Boolean flag to enable or disable the output module.
+  #enable: true
+
   # The list of Redis servers to connect to. If load balancing is enabled, the
   # events are distributed to the servers in the list. If one server becomes
   # unreachable, the events are distributed to the reachable servers only.
@@ -412,6 +424,9 @@ output.elasticsearch:
 
 #------------------------------- File output ----------------------------------
 #output.file:
+  # Boolean flag to enable or disable the output module.
+  #enable: true
+
   # Path to the directory where to save the generated files. The option is
   # mandatory.
   #path: "/tmp/beatname"
@@ -433,6 +448,9 @@ output.elasticsearch:
 
 #----------------------------- Console output ---------------------------------
 #output.console:
+  # Boolean flag to enable or disable the output module.
+  #enable: true
+
   # Pretty print json event
   #pretty: false
 
